--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <header><h1>The Ball Game</h1></header>
 
-    <div class="ball">100</div>
+    <div class="ball" onclick="onBallBlick()">100</div>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
