create util file and getrandomint fun

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="ball" onclick="onBallBlick()">100</div>
 
+    <script src="js/util.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
