Add another ball

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   <body>
     <header><h1>The Ball Game</h1></header>
 
-    <div class="ball" onclick="onBallBlick()">100</div>
+    <div class="balls-container">
+      <div class="ball1" onclick="onBallBlick(this)">100</div>
+      <div class="ball2" onclick="onBallBlick(this)">100</div>
+    </div>
 
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
